# robot-edge-runtime

./: .commitlintrc.yaml  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  package.xml  release.conf.json  setup.bash
.pids/: aer.pid
src/: CMakeLists.txt  application_runner.cpp  application_runner.h  data_collection_planner.cpp  data_collection_planner.h  main.cpp
src/common/: async_io.cpp  async_io.h  cpu_affinity.h  error_handler.h  memory_monitor.h  memory_pool.h  onnx_optimizer.h  performance_utils.h  sensor_config_manager.cpp  sensor_config_manager.h  startup_logger.cpp  startup_logger.h
src/common/audit/: audit_logger.h
src/common/log/: logger.cpp  logger.h  logger_config.h  structured_log.h
src/common/platform/: platform_adapter.cpp  platform_adapter.h
src/common/ros2/: health_monitor.h  qos_callbacks.h  qos_profiles.h
src/common/utils/: sRegex.cpp  sRegex.h  utils.cpp  utils.h
src/data_collection/: collection_feedback.cpp  collection_feedback.h  data_collection_executor.cpp  data_collection_executor.h  data_manager.cpp  data_manager.h  robot_controller.cpp  robot_controller.h  robot_position_tracker.cpp  robot_position_tracker.h
src/data_collection/channel/: channel_manager.cpp  channel_manager.h  message_provider.cpp  message_provider.h  observer.h
src/data_collection/common/: app_config.cpp  app_config.h  base.h  config_watcher.cpp  config_watcher.h  data.cpp  data.h  log_config.cpp  log_config.h  log_task_queue.hpp  macros.h  ringBuffer.h  runtime_config.cpp  runtime_config.h  signal_smoother.h  types.h  upload_queue.hpp
src/data_collection/compliance/: compliance_config.h  compliance_filter.cpp  compliance_filter.h  geospatial_obfuscator.cpp  geospatial_obfuscator.h  image_desensitizer.cpp  image_desensitizer.h  metadata_manifest.cpp  metadata_manifest.h
src/data_collection/compliance_v2/manifest/: privacy_audit_writer.cpp  privacy_audit_writer.h  privacy_manifest_v2.cpp  privacy_manifest_v2.h
src/data_collection/compliance_v2/policy/: compliance_policy.h  compliance_policy_parser.cpp  compliance_policy_parser.h  topic_policy_registry.h
src/data_collection/compliance_v2/runtime/: compliance_decision.h  compliance_filter_v2.cpp  compliance_filter_v2.h  compliance_metrics.h  compliance_worker_pool.h
src/data_collection/compliance_v2/spatial/: geo_indistinguishability.cpp  geo_indistinguishability.h  local_frame_transformer.cpp  local_frame_transformer.h  pointcloud_transformer.cpp  pointcloud_transformer.h  spatial_privacy_processor.cpp  spatial_privacy_processor.h  tf_pose_path_transformer.cpp  (+1 more)
src/data_collection/recorder/: file_compress.cpp  file_compress.h  file_roller.cpp  file_roller.h  ros2bag_recorder.cpp  ros2bag_recorder.h
src/data_collection/srv/: TriggerRecording.srv
src/data_collection/trigger/: ITrigger.h  gait_trigger.cpp  gait_trigger.h  rule_trigger.cpp  rule_trigger.h  trigger_base.cpp  trigger_base.h  trigger_manager.cpp  trigger_manager.h
src/data_collection/uploader/: aws_data_uploader.cpp  aws_data_uploader.h  data_encryption.cpp  data_encryption.h  data_uploader.cc  data_uploader.h  data_uploader_interface.h
src/rl_planning_infer/agents/: auto_reward.cpp  auto_reward.h  auto_route_optimize.h  humanoid_ppo_agent.cpp  humanoid_state.h  onnx_inference_engine.h
src/rl_planning_infer/core/: auto_planner.cpp  humanoid_planner.cpp  humanoid_planner.h  i_planner.h  path_visualizer.h  planner_base.hpp  planner_factory.cpp
src/rl_planning_infer/maps/: humanoid_data_value.cpp  humanoid_data_value.h  sampling_optimizer.h
src/rl_planning_infer/safety/: semantic_constraint.h  semantic_filter.cpp  semantic_filter.h  semantic_map.h
src/rl_planning_infer/utils/: planner_utils.cpp  sector_computer.h
src/simulator/: robot_sim_main.cpp  robot_simulator.cpp  robot_simulator.h  robot_simulator_v2.cpp  robot_simulator_v2.h
src/simulator/gait/: adaptive_gait_controller.cpp  adaptive_gait_controller.h  foot_trajectory_generator.cpp  foot_trajectory_generator.h  gait_state_machine.cpp  gait_state_machine.h  ground_contact_model.cpp  ground_contact_model.h  kinematics_control_layer.cpp  kinematics_control_layer.h  motion_mode_manager.cpp  motion_mode_manager.h  preset_motion_library.cpp  preset_motion_library.h  ruckig_trajectory_adapter.cpp  ruckig_trajectory_adapter.h  safety_system.cpp  safety_system.h  velocity_locomotion_controller.cpp  velocity_locomotion_controller.h
src/simulator/msg/: RobotState.msg
src/simulator/srv/: ClearErrors.srv  GetCurrentPosition.srv  GetErrorStatistics.srv  SetTargetPath.srv
src/state_machine/: state_machine.cpp  state_machine.h
src/tmp/agents/: auto_ppo_agent.cpp  auto_ppo_agent.h  auto_route_optimize.cpp  humanoid_action.h  humanoid_ppo_agent.h  humanoid_reward.h  humanoid_state.cpp
src/tmp/config/: planner_config_manager.cpp  planner_config_manager.h
src/tmp/core/: auto_planner.h  path_visualizer.cpp  planner_factory.h
src/tmp/maps/: costmap.cpp  costmap.h  coverage_metric.cpp  coverage_metric.h  sampling_optimizer.cpp
src/tmp/observation/: state_base.h
src/tmp/safety/: semantic_constraint.cpp  semantic_map.cpp
src/tmp/utils/: planner_utils.h  sector_computer.h
tests/: CMakeLists.txt  test_dcp_integration.cpp  test_dcp_integration.sh
tests/integration/: CMakeLists.txt  test_data_upload_chain.cpp  test_gait_trigger_chain.cpp
tests/unit/: CMakeLists.txt  test_data_collection_executor.cpp  test_data_encryption.cpp  test_error_handler.cpp  test_file_compress.cpp  test_foot_trajectory.cpp  test_kinematics.cpp  test_ring_buffer.cpp  test_ros2bag_recorder.cpp  test_safety_system.cpp  test_state_machine.cpp
tools/performance/: CMakeLists.txt  README.md  benchmark_runner.cpp  dcp_performance_comparison.sh  memory_profiler.sh  memory_test.sh  optimization_comparison_test.sh  perf_profiler.sh  performance_benchmark.h  run_benchmarks  run_benchmarks.cpp  run_benchmarks_opt  run_performance_tests.sh  runtime_performance_test.sh
tools/performance/memory_results/: leak_summary.txt  memory_chart.txt  summary.md
(+833 files in other folders)
